# rainpy

./: .gitignore  LICENSE  README.md  __init__.py  lab.ipynb  main.py  make_require.sh  pypi.sh  pyproject.toml  raindrop.py  read_file.py  requirements.txt  set_up.py  setup.py  start.sh  test.sh  test_instances.py  text.txt
.github/workflows/: python-publish.yml  release.yml  to_gitee.yaml
doc/: rainpy.md
docs/: logger.md  raindrop.md  rainpy.md  ts.md  uppypi.md
rainpy/: __init__.py  __main__.py  core.py  raindrop.py  read.py  save.py  utils.py
src/rainpy/: __init__.py  __main__.py  logger.py  optional.py  read.py  run.py  save.py  test_instances.py  ts.py  utils.py
tests/: __init__.py  test_logger.py  test_rainpy.py  test_read.py  test_ts.py  test_utils.py
tests/test_data/: csv_gbk.csv  csv_gbk_t.csv  test.json  test.jsonl  test_one.json
